# GAMP

./: .gitignore  CMakeLists.txt  prompt.txt
.gpteng/: file_selection.toml
.gpteng/memory/logs/: debug_log_file.txt  diff_errors.txt  improve.txt
GAME/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  GaDaeroJourney.sln  GaDaeroJourney.vcxproj  GaDaeroJourney.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  project  run.sh
GAME/.gpteng/memory/logs/: all_output.txt  gen_entrypoint_chat.txt
GAME/include/: character.h  event.h  game.h  item.h  path.h
GAME/src/: character.cpp  event.cpp  game.cpp  item.cpp  path.cpp
GAME/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
GAMP/: GAMP.sln
GAMP/GAMP/: Enemy.cpp  Enemy.h  GAMP.vcxproj  GAMP.vcxproj.filters  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Graphics.cpp  Graphics.h  Input.cpp  Input.h  Player.cpp  Player.h  State.cpp  State.h  main.cpp
Mario/: Creature.cpp  Mario.vcxproj  Player.cpp  Player.h  WorldObject.h
Mario/x64/Debug/: Mario.exe.recipe  Mario.vcxproj.FileListAbsolute.txt  vc143.idb
Mario/x64/Release/: Mario.exe.recipe  Mario.vcxproj.FileListAbsolute.txt
R2C/: R2C.sln
R2C/Include/SDL2/: SDL_assert.h  SDL_audio.h  SDL_egl.h  SDL_events.h  SDL_haptic.h  SDL_hidapi.h  SDL_image.h  SDL_joystick.h  SDL_locale.h  SDL_messagebox.h  SDL_metal.h  (+16 more)
R2C/R2C/: R2C.vcxproj  R2C.vcxproj.filters
R2C/sound/: 481060__matrixxx__cow-bells-02.oggZone.Identifier
R2C/src/: structs.h
dino-in-zungle-master/: Game_Base.h  Game_Utils.h  SDL_game_demo.vcxproj  SDL_game_demo.vcxproj.filters  State.cpp  State.h  main.cpp
santa15_Lin/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  santa15
santa15_Lin/build_mingw/: CMakeCache.txt  Makefile  cmake_install.cmake
santa15_Lin/cmake/: FindSDL2.cmake
santa15_Lin/src/game/: headlessSnowman.h  house.c  quadtree.c  snow.c
santa15_Lin/src/system/: sound.h
sdl2Santa/santa01/: CMakeLists.txt
sdl2Santa/santa02/: CMakeLists.txt
sdl2Santa/santa03/: ATTRIBUTIONS.txt  CMakeLists.txt
sdl2Santa/santa04/: CMakeLists.txt
sdl2Santa/santa05/: CMakeLists.txt
sdl2Santa/santa06/: CMakeLists.txt
sdl2Santa/santa07/: CMakeLists.txt
sdl2Santa/santa08/: CMakeLists.txt
sdl2Santa/santa09/: ATTRIBUTIONS.txt  CMakeLists.txt
sdl2Santa/santa10/: CMakeLists.txt
sdl2Santa/santa11/: CMakeLists.txt
sdl2Santa/santa12/: CMakeLists.txt
sdl2Santa/santa13/: CMakeLists.txt
sdl2Santa/santa14/: CMakeLists.txt
sdl2Santa/santa15/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ATTRIBUTIONS.txt  CMakeCache.txt  CMakeLists.txt  UpgradeLog.htm  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  santa15.sln  santa15.vcxproj  santa15.vcxproj.filters
sdl2Santa/santa15/santa15.dir/Debug/santa15.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
sdl2Santa/santa15/santa15.dir/Release/santa15.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.write.1.tlog
sdl2Santa/santa15/src/: defs.h  main.c  structs.h
sdl2Santa/santa15/src/game/: carrot.c  carrot.h  gift.c  particles.h  player.c  player.h  quadtree.h  sack.c  snowball.c  snowman.c  title.c
sdl2Santa/santa15/src/system/: sound.c
sdl2Santa/santa15/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
sdl2Santa/santa15/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.read.1.tlog  ZERO_CHECK.lastbuildstate
sdl2Santa/santa15/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
sdl2Santa/santa15/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
src/ConsoleApplication1/: ConsoleApplication1.sln
(+187 files in other folders)
